# cara-rbac

./: .env.example  .gitignore  README.md  docker-compose.dev.yml
.github/workflows/: ci.yml
backend/api-gateway/: Dockerfile  go.mod  go.sum
backend/api-gateway/cmd/server/: main.go
backend/api-gateway/internal/handlers/: handlers.go
backend/api-gateway/internal/middleware/: authn.go  cors.go  ratelimit.go
backend/api-gateway/internal/router/: auth.go  routes.go
backend/api-gateway/internal/ws/: hub.go
backend/behavior-analyzer/: Dockerfile  pyproject.toml
backend/behavior-analyzer/behavior_analyzer/: __main__.py  codeql_runner.py  reachability.py  refgraph.py  resource_mapper.py  test_resource_mapper.py
backend/behavior-analyzer/codeql-queries/go/: go_call_graph.ql  qlpack.yml
backend/behavior-analyzer/codeql-queries/python/: python_call_graph.ql  qlpack.yml
backend/cluster-collector/: Dockerfile  go.mod  go.sum
backend/cluster-collector/cmd/collector/: main.go
backend/cluster-collector/internal/auditwebhook/: handler.go
backend/ebpf-agent/: Dockerfile  go.mod
backend/ebpf-agent/bpf/: cara_connect.bpf.c
backend/ebpf-agent/cmd/agent/: main.go
backend/fp-engine/: Dockerfile  pyproject.toml
backend/fp-engine/fp_engine/: __main__.py  test_fp_engine.py
backend/graph-svc/: Dockerfile  go.mod  go.sum
backend/minimizer/: Dockerfile  go.mod  go.sum
backend/pod-matcher/: Dockerfile  pyproject.toml
backend/pod-matcher/pod_matcher/: __main__.py  cache.py  go_symtab.py  image_inspector.py  llm_client.py  test_pod_matcher.py
backend/pod-matcher/pod_matcher/plugins/: python_entry.py
backend/pod-matcher/prompts/: few_shot_examples.json
backend/rbac-analyzer/: Dockerfile  go.mod  go.sum
backend/rbac-analyzer/testdata/: sample-app.yaml
backend/runtime-monitor/: Dockerfile  go.mod  go.sum
backend/runtime-monitor/falco/: deduplicator.go  parser.go  parser_test.go  receiver.go
backend/runtime-monitor/proto/: monitor.proto
configs/: audit-policy.yaml
configs/falco/: cara-rbac.yaml
configs/kyverno/: no-wildcard.yaml
configs/opa/: rbac_validate.rego
db/neo4j/init/: constraints.cypher
db/postgres/migrations/: 0001_init.sql  0002_temporal_and_scores.sql
docs/: run_and_verify_guide.md
docs/adr/: ADR-001-monorepo.md
frontend/dashboard/: app.js  index.html  package-lock.json  package.json  style.css
helm/cara-rbac/: Chart.yaml  values.yaml
helm/cara-rbac/templates/: api-gateway.yaml
kubernetes/base/: clusterrole.yaml  clusterrolebinding.yaml  namespace-sa.yaml
scripts/: test_e2e.py
(+13 files in other folders)
