[project]
name = "behavior-analyzer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0",
    "structlog>=24.2.0",
    "networkx>=3.3",
    "sarif-om>=1.0.4",
    "junitparser>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
behavior-analyzer = "behavior_analyzer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
