[project]
name = "behavior-analyzer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
    "structlog>=24.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
behavior-analyzer = "behavior_analyzer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["behavior_analyzer"]