[project]
name = "pod-matcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.35.0",
    "docker>=7.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "psycopg2-binary>=2.9.9",
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.14.0",
]

[project.scripts]
pod-matcher = "pod_matcher.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
